--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer's Portfolio</title>
+    <link rel="stylesheet" href="style\portfolio.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h2 class="nav-title"> Ma<span class="text-primary">r</span>y </h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li>
+                    <button class="btn-primary">
+                        Hire me
+                    </button>
+                </li>
+            </ul>
+        </nav>
+        <!--Banner design -->
+        <div class="banner">
+            <div class="bannertitle">
+                <h3 class="bnr-sub">Hi, I am</h3>
+                <h1 class="bnr">Mary Hardy</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita voluptatum ducimus a molestias hic minus commodi odio voluptatibus ullam, dicta possimus libero. Amet dolorum rem cum neque delectus praesentium laboriosam.</p>
+                <button class="btn">Download CV</button>
+
+            </div>
+            <img src="images/hardy.png" alt="">
+
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
