--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style\portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title"> Ma<span class="text-primary">r</span>y </h2>
             <ul>
@@ -26,16 +26,43 @@
             <div class="bannertitle">
                 <h3 class="bnr-sub">Hi, I am</h3>
                 <h1 class="bnr">Mary Hardy</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita voluptatum ducimus a molestias hic minus commodi odio voluptatibus ullam, dicta possimus libero. Amet dolorum rem cum neque delectus praesentium laboriosam.</p>
-                <button class="btn">Download CV</button>
-
+                <p class="bnr-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="bt">
+                <button class="btn-primary">Download CV</button>
+                <button class="btn2"> <img src="images/icons/insta.png" alt=""> Contact</button>
+                </div>
             </div>
-            <img src="images/hardy.png" alt="">
-
+            <div class="img">
+            <img src="images/hardy.png" alt="hardy">
+            </div>
         </div>
 
     </header>
     <main>
+        <section class="about">
+            <h3 class="sectiontitle">About Me</h3>
+            <p class="sec-des">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name</p>
+                    <p class="info-des">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email</p>
+                    <p class="info-des">something@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of Birth</p>
+                    <p class="info-des">5 June 1990</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From</p>
+                    <p class="info-des"> Los Angeles, USA</p>
+                </div>
+                
+            </div>
+
+        </section>
 
     </main>
     <footer>
