--- a/index.html
+++ b/index.html
@@ -63,6 +63,51 @@
             </div>
 
         </section>
+        <section class="what-i-do">
+            <h3 class="sectiontitle">What I do</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="/images/icons/js.png" alt="">
+                    <p class="skilltitle">Vanilla Javascript</p>
+                    <p class="skill-des">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi dolore, veritatis quia quibusdam sapiente sit.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/react.png" alt="">
+                    <p class="skilltitle">React</p>
+                    <p class="skill-des">Officiis nobis eaque, eveniet officia, dignissimos aut aperiam soluta nostrum harum repellat at voluptatum error.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/nodejs.png" alt="">
+                    <p class="skilltitle">Nodejs</p>
+                    <p class="skill-des">Sit exercitationem temporibus iusto quis accusamus, non cupiditate? Nisi iste voluptate at, ipsam maiores quo.</p>
+                </div>
+                <div class="skill">
+                    <img src="/images/icons/mongo.png" alt="">
+                    <p class="skilltitle">MongoDB</p>
+                    <p class="skill-des">Ullam impedit, ipsam totam earum, veniam rem pariatur, placeat eligendi laborum reiciendis culpa magni! Rem?</p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h3 class="sectiontitle">
+                A Summary Of My Resume
+            </h3>
+            <div>
+                <h3 class="resume-title">My Education</h3>
+                <div>
+                    
+                </div>
+
+            </div>
+            <div>
+                <h3 class="resume-title">My Education</h3>
+                <div>
+                    
+                </div>
+
+            </div>
+
+        </section>
 
     </main>
     <footer>
